Added class RTFs and added code to display it Next will be creating the JSON Information for both

--- a/SW5E App.csproj
+++ b/SW5E App.csproj
@@ -21,6 +21,36 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Objects\Classes\Descriptions\BERSERKER.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\CONSULAR.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\ENGINEER.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\FIGHTER.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\GUARDIAN.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\MONK.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\OPERATIVE.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\SCHOLAR.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\SCOUT.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Objects\Classes\Descriptions\SENTINEL.rtf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Objects\Species\Descriptions\ALEENA.rtf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
